# Norx

./: Cargo.toml  README.md
config/: norx.toml
rules/: default.rules
src/: main.rs
src/capture/: mod.rs  pcap.rs
src/config/: mod.rs
src/core/: engine.rs  flow.rs  mod.rs  packet.rs
src/preprocessors/: mod.rs  stream.rs
src/protocols/: dns.rs  http.rs  mod.rs  tls.rs
src/rules/: mod.rs
src/utils/: logger.rs  metrics.rs  mod.rs
